登录注册功能实现

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
             android:textSize="20sp"
             tools:ignore="LabelFor,RtlSymmetry" />
         <Button
+            android:id="@+id/button_login"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_below="@+id/edit_password"
